[project]
name = "matchme-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "fastapi>=0.115.13",
    "strawberry-graphql>=0.275.0",
    "tortoise-orm[asyncpg]>=0.25.1",
    "uvicorn>=0.34.3",
    "websockets>=15.0.1",
]
